--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,25 +13,25 @@
 }
 
 body {
-    height: 100vh;
     background: #ffe53bd8;
-    display: flex;
     align-items: center;
     justify-content: center;
 }
 
 .relogio {
-    display: flex;
+    margin-right: auto;
+    margin-top: 100px;
+    display: grid;
     align-items: center;
     justify-content: space-around;
-    height: 600px;
-    width: 800px;
+    height: 80%;
+    width: 90%;
     background: transparent;
 }
 
 .relogio div {
-    height: 170px;
-    width: 150px;
+    height: 150px;
+    width: 130px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -44,8 +44,8 @@ body {
 }
 
 .relogio #div-d {
-    height: 170px;
-    width: 150px;
+    height: 150px;
+    width: 130px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -69,12 +69,12 @@ body {
 
 #button {
     font-weight: bolder;
-    font-size: 50px;
+    font-size: 40px;
     padding: 10px;
     align-items: center;
     text-align: center;
-    height: 170px;
-    width: 150px;
+    height: 150px;
+    width: 130px;
     display: flex;
     border-radius: 3px;
     box-shadow: 0px 8px 10px rgba(0, 0, 0, .5);
